--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -18301,47 +18301,45 @@ on("sheet:opened change:parierwaffe1_leiteigenschaft change:parierwaffe2_leiteig
 	});
 });
 
-
-// Schadensbonus Leiteigenschaft für Haupthand
+//Schadensbonus Leiteigenschaft für Haupthand
 on("change:nkw1_leiteigenschaft change:schadensberechnungwertnkw1 change:nkw2_leiteigenschaft change:schadensberechnungwertnkw2 change:nkw3_leiteigenschaft change:schadensberechnungwertnkw3 change:nkw4_leiteigenschaft change:schadensberechnungwertnkw4 change:kk_wert change:ge_wert", function() {
 	getAttrs(["NKW1_Leiteigenschaft", "SchadensberechnungWertNKW1", "NKW2_Leiteigenschaft", "SchadensberechnungWertNKW2", "NKW3_Leiteigenschaft", "SchadensberechnungWertNKW3", "NKW4_Leiteigenschaft", "SchadensberechnungWertNKW4", "KK_Wert", "GE_Wert"], function(values) {
-		if (values.NKW1_Leiteigenschaft == "@{GE_Wert}") {
-			setAttrs({ NKW1_SB: Math.max(parseInt(values.GE_Wert) - parseInt(values.SchadensberechnungWertNKW1),0) });
+		if (parseInt(values.NKW1_Leiteigenschaft||0) != 0 && parseInt(values.SchadensberechnungWertNKW1||0) != 0) {
+			if (values.NKW1_Leiteigenschaft == "@{GE_Wert}") {
+				setAttrs({ NKW1_SB: Math.max(parseInt(values.GE_Wert||0) - parseInt(values.SchadensberechnungWertNKW1||0), 0) }) ;
+			} else {
+				setAttrs({ NKW1_SB: Math.max(parseInt(values.KK_Wert||0) - parseInt(values.SchadensberechnungWertNKW1||0), 0) }) ;
 			}
-		if (values.NKW1_Leiteigenschaft == "@{KK_Wert}") {
-			setAttrs({ NKW1_SB: Math.max(parseInt(values.KK_Wert) - parseInt(values.SchadensberechnungWertNKW1),0) });
+		} else {
+				setAttrs({ NKW1_SB: 0 }) ;
+		}
+		if (parseInt(values.NKW2_Leiteigenschaft||0) != 0 && parseInt(values.SchadensberechnungWertNKW2||0) != 0) {
+			if (values.NKW2_Leiteigenschaft == "@{GE_Wert}") {
+				setAttrs({ NKW2_SB: Math.max(parseInt(values.GE_Wert||0) - parseInt(values.SchadensberechnungWertNKW2||0), 0) }) ;
+			} else {
+				setAttrs({ NKW2_SB: Math.max(parseInt(values.KK_Wert||0) - parseInt(values.SchadensberechnungWertNKW2||0), 0) }) ;
 			}
-		if (values.NKW1_Leiteigenschaft == 0) {
-			setAttrs({ NKW1_SB: 0 });
+		} else {
+				setAttrs({ NKW2_SB: 0 }) ;
+		}
+		if (parseInt(values.NKW3_Leiteigenschaft||0) != 0 && parseInt(values.SchadensberechnungWertNKW3||0) != 0) {
+			if (values.NKW3_Leiteigenschaft == "@{GE_Wert}") {
+				setAttrs({ NKW3_SB: Math.max(parseInt(values.GE_Wert||0) - parseInt(values.SchadensberechnungWertNKW3||0), 0) }) ;
+			} else {
+				setAttrs({ NKW3_SB: Math.max(parseInt(values.KK_Wert||0) - parseInt(values.SchadensberechnungWertNKW3||0), 0) }) ;
 			}
-		if (values.NKW2_Leiteigenschaft == "@{GE_Wert}") {
-			setAttrs({ NKW2_SB: Math.max(parseInt(values.GE_Wert) - parseInt(values.SchadensberechnungWertNKW2),0) });
+		} else {
+				setAttrs({ NKW3_SB: 0 }) ;
+		}
+		if (parseInt(values.NKW4_Leiteigenschaft||0) != 0 && parseInt(values.SchadensberechnungWertNKW4||0) != 0) {
+			if (values.NKW4_Leiteigenschaft == "@{GE_Wert}") {
+				setAttrs({ NKW4_SB: Math.max(parseInt(values.GE_Wert||0) - parseInt(values.SchadensberechnungWertNKW4||0), 0) }) ;
+			} else {
+				setAttrs({ NKW4_SB: Math.max(parseInt(values.KK_Wert||0) - parseInt(values.SchadensberechnungWertNKW4||0), 0) }) ;
 			}
-		if (values.NKW2_Leiteigenschaft == "@{KK_Wert}") {
-			setAttrs({ NKW2_SB: Math.max(parseInt(values.KK_Wert) - parseInt(values.SchadensberechnungWertNKW2),0) });
-			}
-		if (values.NKW2_Leiteigenschaft == 0) {
-			setAttrs({ NKW2_SB: 0 });
-			}
-		if (values.NKW3_Leiteigenschaft == "@{GE_Wert}") {
-			setAttrs({ NKW3_SB: Math.max(parseInt(values.GE_Wert) - parseInt(values.SchadensberechnungWertNKW3),0) });
-			}
-		if (values.NKW3_Leiteigenschaft == "@{KK_Wert}") {
-			setAttrs({ NKW3_SB: Math.max(parseInt(values.KK_Wert) - parseInt(values.SchadensberechnungWertNKW3),0) });
-			}
-		if (values.NKW3_Leiteigenschaft == 0) {
-			setAttrs({ NKW3_SB: 0 });
-			}
-		if (values.NKW4_Leiteigenschaft == "@{GE_Wert}") {
-			setAttrs({ NKW4_SB: Math.max(parseInt(values.GE_Wert) - parseInt(values.SchadensberechnungWertNKW4),0) });
-			}
-		if (values.NKW4_Leiteigenschaft == "@{KK_Wert}") {
-			setAttrs({ NKW4_SB: Math.max(parseInt(values.KK_Wert) - parseInt(values.SchadensberechnungWertNKW4),0) });
-			}
-		if (values.NKW4_Leiteigenschaft == 0) {
-			setAttrs({ NKW4_SB: 0 });
-			}
-		cosole.log(parseInt(values.NKW1_Leiteigenschaft)) ;
+		} else {
+				setAttrs({ NKW4_SB: 0 }) ;
+		}
 	});
 });
 
