--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -1,4 +1,4 @@
-<!--3/31/20 set sheet version manually with currentVersion in sheetworkers-->
+<!--4/12/20 set sheet version manually with currentVersion in sheetworkers-->
 <input type="hidden" name="attr_version" value="0" />
 <!-- ADDED recalc checkbox to force sheet worker events. temp unhide for testing purposes-->
 <input class="hidden" name="attr_recalc1" type="checkbox" />
@@ -19,20 +19,27 @@
     <span class="announcements-show toggle-dice-only toggle-monster-only" name="attr_version">&nbsp;</span>
     <div class="announcements toggle-dice-only toggle-monster-only">
         <h3 data-i18n="latest-announcements">Latest Announcements</h3>
-        <span class="footer">3/31/20</span>
+        <span class="footer">4/12/20</span>
         <ol style="margin: 0 2em 0 2em; padding: 0 1em 0 3em;">
-            <span>v1.65</span>
-            <li>Added Misc Gear modifier to Skills.</li>
-            <li>All Attributes are now "rollable".</li>
-            <li>Fixed missing whisper option for notes rolls.</li>
-            <li>Replaced the repeating row text "+Add" and "Modify" with simple icons.</li>
-            <li>Swedish translations have been added. Thank you Magnus M.</li>
+            <span>v1.66</span>
+            <li>Increased the range of each d66 dice to allow for custom rolls 0-100(normally, each d6 allows 1-6). While this does not effect the d66 roll on the sheet, it does allow more flexability for custom macros if desired.
+                <br><b>d100 Roll macro example;</b>
+                <br><textarea style="height: auto;">@{selected|whisper_option} &amp;{template:forbiddenlands} {{character_name=@{selected|character_name}}} {{character_id=@{selected|character_id}}} {{name=D100 Roll}} {{d66-die-one=[[ 1 ]] }} {{d66-roll-one=[[ 1d10-1 ]] }} {{d66-die-two=[[ 1 ]] }} {{d66-roll-two=[[ 1d10-1 ]] }}</textarea>
+            </li>
+            <li>Fixed the translation list ordering for Skills and Stockpile.</li>
         </ol>
         <br>
         <input type="checkbox" class="announcements-older-show" name="attr_show_announcements_old" value="1" data-i18n-title="old-announcements" />
         <span data-i18n-title="old-announcements">&nbsp;</span>
         <span class="announcements-older-show">
             <ol>
+                <span>v1.65</span>
+                <li>Added Misc Gear modifier to Skills.</li>
+                <li>All Attributes are now "rollable".</li>
+                <li>Fixed missing whisper option for notes rolls.</li>
+                <li>Replaced the repeating row text "+Add" and "Modify" with simple icons.</li>
+                <li>Swedish translations have been added. Thank you Magnus M.</li>
+
                 <span>v1.64</span>
                 <li>Bug fix: shield shove/parry rolls were erroneously including strength as gear dice.</li>
                 <li>Optimized the css that reduces the opacity of damage skulls above the attribute's max value. Purely cosmetic.</li>
@@ -1448,7 +1455,7 @@
                             </div>
                         </div>
                     </span>
-                    <span class="skills-row" data-i18n-list-item="sleight_of_hand">
+                    <span class="skills-row" data-i18n-list-item="sleight-of-hand">
                         <button type="action" name="act_dice_pool_sleight_of_hand" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="sleight-of-hand">Sleight of hand</span>&nbsp;(<span class="small-caps" data-i18n="agility-abbr">Agi</span>&nbsp;<span name="attr_agility_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_sleight_of_hand" value="0" min="0" title="@{sleight_of_hand}" />
                         <select class="input" name="attr_sleight_of_hand_skill_misc" title="@{sleight_of_hand_skill_misc}">
@@ -2427,27 +2434,48 @@
                 <div class="stronghold-stockpile-box2 column-header"><span data-i18n="units">Units</span></div>
                 <div class="stronghold-stockpile-box3 column-header"><span data-i18n="units">Units</span></div>
                 <div class="stronghold-stockpile-box4 column-header"><span data-i18n="units">Units</span></div>
-                <span class="label" data-i18n-list-item="bread" data-i18n="bread">Bread</span><input class="input-number" type="number" name="attr_stockpile_bread" value="0" min="0"  title="@{stockpile_bread}" />
-                <span class="label" data-i18n-list-item="cloth" data-i18n="cloth">Cloth</span><input class="input-number" type="number" name="attr_stockpile_cloth" value="0" min="0"  title="@{stockpile_cloth}" />
-                <span class="label" data-i18n-list-item="fish" data-i18n="fish">Fish</span><input class="input-number" type="number" name="attr_stockpile_fish" value="0" min="0" title="@{stockpile_fish}" />
-                <span class="label" data-i18n-list-item="flour" data-i18n="flour">Flour</span><input class="input-number" type="number" name="attr_stockpile_flour" value="0" min="0"  title="@{stockpile_flour}" />
-                <span class="label" data-i18n-list-item="food" data-i18n="food">Food</span><input class="input-number" type="number" name="attr_stockpile_food" value="0" min="0" title="@{stockpile_food}" />
-                <span class="label" data-i18n-list-item="fur" data-i18n="fur">Fur</span><input class="input-number" type="number" name="attr_stockpile_fur" value="0" min="0" title="@{stockpile_fur}" />
-                <span class="label" data-i18n-list-item="glass" data-i18n="glass">Glass</span><input class="input-number" type="number" name="attr_stockpile_glass" value="0" min="0"  title="@{stockpile_glass}" />
-                <span class="label" data-i18n-list-item="gold" data-i18n="gold">Gold</span><input class="input-number" type="number" name="attr_stockpile_gold" value="0" min="0" title="@{stockpile_gold}" />
-                <span class="label" data-i18n-list-item="grain" data-i18n="grain">Grain</span><input class="input-number" type="number" name="attr_stockpile_grain" value="0" min="0"  title="@{stockpile_grain}" />
-                <span class="label" data-i18n-list-item="herbs" data-i18n="herbs">Herbs</span><input class="input-number" type="number" name="attr_stockpile_herbs" value="0" min="0"  title="@{stockpile_herbs}" />
-                <span class="label" data-i18n-list-item="iron" data-i18n="iron">Iron</span><input class="input-number" type="number" name="attr_stockpile_iron" value="0" min="0" title="@{stockpile_iron}" />
-                <span class="label" data-i18n-list-item="iron-ore" data-i18n="iron-ore">Iron Ore</span><input class="input-number" type="number" name="attr_stockpile_iron_ore" value="0" min="0"  title="@{stockpile_iron_ore}" />
-                <span class="label" data-i18n-list-item="leather" data-i18n="leather">Leather</span><input class="input-number" type="number" name="attr_stockpile_leather" value="0" min="0"  title="@{stockpile_leather}" />
-                <span class="label" data-i18n-list-item="meat" data-i18n="meat">Meat</span><input class="input-number" type="number" name="attr_stockpile_meat" value="0" min="0" title="@{stockpile_meat}" />
-                <span class="label" data-i18n-list-item="silver" data-i18n="silver">Silver</span><input class="input-number" type="number" name="attr_stockpile_silver" value="0" min="0"  title="@{stockpile_silver}" />
-                <span class="label" data-i18n-list-item="stone" data-i18n="stone">Stone</span><input class="input-number" type="number" name="attr_stockpile_stone" value="0" min="0"  title="@{stockpile_stone}" />
-                <span class="label" data-i18n-list-item="tallow" data-i18n="tallow">Tallow</span><input class="input-number" type="number" name="attr_stockpile_tallow" value="0" min="0"  title="@{stockpile_tallow}" />
-                <span class="label" data-i18n-list-item="vegetables" data-i18n="vegetables">Vegetables</span><input class="input-number" type="number" name="attr_stockpile_vegatables" value="0" min="0"  title="@{stockpile_vegatables}" />
-                <span class="label" data-i18n-list-item="water" data-i18n="water">Water</span><input class="input-number" type="number" name="attr_stockpile_water" value="0" min="0"  title="@{stockpile_water}" />
-                <span class="label" data-i18n-list-item="wood" data-i18n="wood">Wood</span><input class="input-number" type="number" name="attr_stockpile_wood" value="0" min="0" title="@{stockpile_wood}" />
-                <span class="label" data-i18n-list-item="wool" data-i18n="wool">Wool</span><input class="input-number" type="number" name="attr_stockpile_wool" value="0" min="0" title="@{stockpile_wool}" />
+                <span data-i18n-list-item="bread"><span data-i18n="bread" class="label">Bread</span>
+				<input class="input-number" type="number" name="attr_stockpile_bread" value="0" min="0" title="@{stockpile_bread}" /></span>
+                <span data-i18n-list-item="cloth"><span data-i18n="cloth" class="label">Cloth</span>
+				<input class="input-number" type="number" name="attr_stockpile_cloth" value="0" min="0" title="@{stockpile_cloth}" /></span>
+                <span data-i18n-list-item="fish"><span data-i18n="fish" class="label">Fish</span>
+				<input class="input-number" type="number" name="attr_stockpile_fish" value="0" min="0" title="@{stockpile_fish}" /></span>
+                <span data-i18n-list-item="flour"><span data-i18n="flour" class="label">Flour</span>
+				<input class="input-number" type="number" name="attr_stockpile_flour" value="0" min="0" title="@{stockpile_flour}" /></span>
+                <span data-i18n-list-item="food"><span data-i18n="food" class="label">Food</span>
+				<input class="input-number" type="number" name="attr_stockpile_food" value="0" min="0" title="@{stockpile_food}" /></span>
+                <span data-i18n-list-item="fur"><span data-i18n="fur" class="label">Fur</span>
+				<input class="input-number" type="number" name="attr_stockpile_fur" value="0" min="0" title="@{stockpile_fur}" /></span>
+                <span data-i18n-list-item="glass"><span data-i18n="glass" class="label">Glass</span>
+				<input class="input-number" type="number" name="attr_stockpile_glass" value="0" min="0" title="@{stockpile_glass}" /></span>
+                <span data-i18n-list-item="gold"><span data-i18n="gold" class="label">Gold</span>
+				<input class="input-number" type="number" name="attr_stockpile_gold" value="0" min="0" title="@{stockpile_gold}" /></span>
+                <span data-i18n-list-item="grain"><span data-i18n="grain" class="label">Grain</span>
+				<input class="input-number" type="number" name="attr_stockpile_grain" value="0" min="0" title="@{stockpile_grain}" /></span>
+                <span data-i18n-list-item="herbs"><span data-i18n="herbs" class="label">Herbs</span>
+				<input class="input-number" type="number" name="attr_stockpile_herbs" value="0" min="0" title="@{stockpile_herbs}" /></span>
+                <span data-i18n-list-item="iron"><span data-i18n="iron" class="label">Iron</span>
+				<input class="input-number" type="number" name="attr_stockpile_iron" value="0" min="0" title="@{stockpile_iron}" /></span>
+                <span data-i18n-list-item="iron-ore"><span data-i18n="iron-ore" class="label">Iron Ore</span>
+				<input class="input-number" type="number" name="attr_stockpile_iron_ore" value="0" min="0" title="@{stockpile_iron_ore}" /></span>
+                <span data-i18n-list-item="leather"><span data-i18n="leather" class="label">Leather</span>
+				<input class="input-number" type="number" name="attr_stockpile_leather" value="0" min="0" title="@{stockpile_leather}" /></span>
+                <span data-i18n-list-item="meat"><span data-i18n="meat" class="label">Meat</span>
+				<input class="input-number" type="number" name="attr_stockpile_meat" value="0" min="0" title="@{stockpile_meat}" /></span>
+                <span data-i18n-list-item="silver"><span data-i18n="silver" class="label">Silver</span>
+				<input class="input-number" type="number" name="attr_stockpile_silver" value="0" min="0" title="@{stockpile_silver}" /></span>
+                <span data-i18n-list-item="stone"><span data-i18n="stone" class="label">Stone</span>
+				<input class="input-number" type="number" name="attr_stockpile_stone" value="0" min="0" title="@{stockpile_stone}" /></span>
+                <span data-i18n-list-item="tallow"><span data-i18n="tallow" class="label">Tallow</span>
+				<input class="input-number" type="number" name="attr_stockpile_tallow" value="0" min="0" title="@{stockpile_tallow}" /></span>
+                <span data-i18n-list-item="vegetables"><span data-i18n="vegetables" class="label">Vegetables</span>
+				<input class="input-number" type="number" name="attr_stockpile_vegatables" value="0" min="0" title="@{stockpile_vegatables}" /></span>
+                <span data-i18n-list-item="water"><span data-i18n="water" class="label">Water</span>
+				<input class="input-number" type="number" name="attr_stockpile_water" value="0" min="0" title="@{stockpile_water}" /></span>
+                <span data-i18n-list-item="wood"><span data-i18n="wood" class="label">Wood</span>
+				<input class="input-number" type="number" name="attr_stockpile_wood" value="0" min="0" title="@{stockpile_wood}" /></span>
+                <span data-i18n-list-item="wool"><span data-i18n="wool" class="label">Wool</span>
+				<input class="input-number" type="number" name="attr_stockpile_wool" value="0" min="0" title="@{stockpile_wool}" /></span>
             </div>
         </div>
         <div class="box stronghold-notes">
@@ -3110,18 +3138,19 @@
             </div>
             {{/rollTotal() consumable-die-twelve 1}}
 <!--- d66 -->
+<!-- increased range of each d66 dice to allow for custom rolls 0-100-->
             {{#rollTotal() d66-die-one 1}}
             <div class="template-grid-item template-span-three template-maroon-dice">
-                {{#rollBetween() d66-roll-one 1 6}}
+                {{#rollBetween() d66-roll-one 0 100}}
                 {{d66-roll-one}}
-                {{/rollBetween() d66-roll-one 1 6}}
+                {{/rollBetween() d66-roll-one 0 100}}
             </div>
             {{/rollTotal() d66-die-one 1}}
             {{#rollTotal() d66-die-two 1}}
             <div class="template-grid-item template-span-four template-maroon-dice">
-                {{#rollBetween() d66-roll-two 1 6}}
+                {{#rollBetween() d66-roll-two 0 100}}
                 {{d66-roll-two}}
-                {{/rollBetween() d66-roll-two 1 6}}
+                {{/rollBetween() d66-roll-two 0 100}}
             </div>
             {{/rollTotal() d66-die-two 1}}
 
@@ -3284,7 +3313,7 @@
     /* version tracking */
     var Sheet = Sheet || (function () {
     
-        let currentVersion = 1.65,
+        let currentVersion = 1.66,
     
             newAnnouncement = function (v) {
                 getAttrs(["version", "show_announcements"], function (values) {
