[Agon Official] Support the final boon checkbox

--- a/Agon Official/agon.html
+++ b/Agon Official/agon.html
@@ -703,6 +703,7 @@ const kBrace = "&" + "#125" + ";";
 const kDoubleBrace = kBrace + kBrace;
 const kExtraEpithetField = "boons_4_check_1";
 const kPathosGivesTwoDiceField = "boons_6_check_1";
+const kSpendDivineFavorBoon = "boons_7_check_1";
 const kDomains = [
   "arts_oration",
   "blood_valor",
@@ -855,6 +856,14 @@ function setupDomainQueries(attrs) {
     attrs[`${domain}_translated`] = getTranslation(domain);
   });
 }
+function setupDivineFavorQuery(attrs) {
+  const base_query = query("spend_divine_favor", [0]);
+  if (attrs[kSpendDivineFavorBoon] === "1") {
+    attrs["divine_favor_query"] = `[[${base_query} + 2*{${base_query},1}kl1]]`;
+  } else {
+    attrs["divine_favor_query"] = base_query;
+  }
+}
 register(
   kPathosGivesTwoDiceField,
   function () {
@@ -869,9 +878,16 @@ register(
   },
   "Handle adding or removing an extra epithet"
 );
+register(
+  kSpendDivineFavorBoon,
+  function () {
+    getSetAttrs([kSpendDivineFavorBoon], setupDivineFavorQuery);
+  },
+  "Handle boon for getting +2d4 on spending divine favor"
+)
 registerOpened(function () {
   getSetAttrs(
-    [kExtraEpithetField, kPathosGivesTwoDiceField, "version"],
+    [kExtraEpithetField, kPathosGivesTwoDiceField, kSpendDivineFavorBoon, "version"],
     function (attrs, setter) {
       if (!attrs["version"]) performFirstTimeSetup(attrs, setter);
       setter.setAttrs({
@@ -879,12 +895,12 @@ registerOpened(function () {
           "advantage_bond_support"
         ),
         bonusdice_query: query("bonusdice_query", [0]),
-        divine_favor_query: query("spend_divine_favor", [0]),
         target_query: query("target_number", [0]),
         version: kSheetVersion,
       });
       setEpithetQuery(attrs);
       setupDomainQueries(attrs);
+      setupDivineFavorQuery(attrs);
     }
   );
 }, "Handle setting default attributes when opening the sheet");}
