--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -17461,9 +17461,9 @@
 			<input type="checkbox" name="attr_zeige_schilde" value="1" /> <span data-i18n="zeige-schilde">Zeige Schilde</span><br>
 			<input type="checkbox" name="attr_zeige_parierwaffen" value="1" /> <span data-i18n="zeige-nebenhand">Zeige Nebenhand</span><br>
 			<input type="checkbox" name="attr_zeige_fernkampf" value="1" /> <span data-i18n="zeige-fernkampf">Zeige Fernkampf</span><br>
-			<input type="checkbox" name="attr_setze_le_max" value="0" /> <span data-i18n="setze-le-max">Setze LE max für Token</span><br>
-			<input type="checkbox" name="attr_setze_ae_max" value="0" /> <span data-i18n="setze-ae-max">Setze AE max für Token</span><br>
-			<input type="checkbox" name="attr_setze_ke_max" value="0" /> <span data-i18n="setze-ke-max">Setze KE max für Token</span><br>
+			<input type="checkbox" name="attr_setze_lemax" value="1" /> <span data-i18n="setze-le-max">Setze LE max für Token</span><br>
+			<input type="checkbox" name="attr_setze_aemax" value="1" /> <span data-i18n="setze-ae-max">Setze AE max für Token</span><br>
+			<input type="checkbox" name="attr_setze_kemax" value="1" /> <span data-i18n="setze-ke-max">Setze KE max für Token</span><br>
 		</div>
 
 		<div class="sheet-section sheet-section-config2" style="align:left;">
@@ -17993,7 +17993,7 @@
 
 // Update LE_Grundwert und LE_Wert_max, wenn sich ein Parameter ändert der in die Berechnung einfliesst.
 on("change:le_spezies change:ko_wert change:vorteil_hohe_lebenskraft change:vorteil_hohe_lebenskraft_stufe change:nachteil_niedrige_lebenskraft change:nachteil_niedrige_lebenskraft_stufe change:le_zukauf sheet:opened", function() {
-	getAttrs(["LE_Spezies", "KO_Wert", "vorteil_hohe_lebenskraft", "vorteil_hohe_lebenskraft_stufe", "nachteil_niedrige_lebenskraft", "nachteil_niedrige_lebenskraft_stufe", "LE_Zukauf"], function(values) {
+	getAttrs(["setze_lemax", "LE_Spezies", "KO_Wert", "vorteil_hohe_lebenskraft", "vorteil_hohe_lebenskraft_stufe", "nachteil_niedrige_lebenskraft", "nachteil_niedrige_lebenskraft_stufe", "LE_Zukauf"], function(values) {
 	var i = 0 ;
 	i += parseInt(values.LE_Spezies) + (2 * parseInt(values.KO_Wert)) + parseInt(values.LE_Zukauf) ;
 		if (values.vorteil_hohe_lebenskraft == 1) {
@@ -18002,15 +18002,24 @@ on("change:le_spezies change:ko_wert change:vorteil_hohe_lebenskraft change:vort
 		else if (values.nachteil_niedrige_lebenskraft == 1) {
 			i -= parseInt(values.nachteil_niedrige_lebenskraft_stufe||0) ;
 		}	
-	setAttrs({ LE_Grundwert: i, LE_Wert_max: i}) ;
+		console.log(parseInt(values.setze_lemax));
+	if (parseInt(values.setze_lemax) == 1) {
+		setAttrs({ LE_Grundwert: i, LE_Wert_max: i}) ;
+	} else {
+		setAttrs({ LE_Grundwert: i }) ;
+	}
 	});
 });
 
 //rechne KE_Grundwert und setze KE_Wert_max
 on("change:vorteil_geweihter change:ke_leiteigenschaft change:vorteil_hohe_karmalkraft change:vorteil_hohe_karmalkraft_stufe change:nachteil_niedrige_karmalkraft change:nachteil_niedrige_karmalkraft_stufe change:KE_Zukauf", function() {
-	getAttrs(["vorteil_geweihter", "KE_Leiteigenschaft", "vorteil_hohe_karmalkraft", "vorteil_hohe_karmalkraft_stufe", "nachteil_niedrige_karmalkraft", "nachteil_niedrige_karmalkraft_stufe", "KE_Zukauf"], function(values) {
+	getAttrs(["setze_kemax", "vorteil_geweihter", "KE_Leiteigenschaft", "vorteil_hohe_karmalkraft", "vorteil_hohe_karmalkraft_stufe", "nachteil_niedrige_karmalkraft", "nachteil_niedrige_karmalkraft_stufe", "KE_Zukauf"], function(values) {
 	var i = parseInt(values.vorteil_geweihter) * (20 + parseInt(values.KE_Leiteigenschaft) + (parseInt(values.vorteil_hohe_karmalkraft) * parseInt(values.vorteil_hohe_karmalkraft_stufe)) + (-1 * ( parseInt(values.nachteil_niedrige_karmalkraft) * parseInt(values.nachteil_niedrige_karmalkraft_stufe))) + parseInt(values.KE_Zukauf)) ;
-	setAttrs({ KE_Grundwert: i, KE_Wert_max: i }) ;
+	if (values.setze_kemax == 1) {
+		setAttrs({ KE_Grundwert: i, KE_Wert_max: i }) ;
+	} else {
+		setAttrs({ KE_Grundwert: i }) ;	
+	}
 	});
 });
 
