Fixed styling of a few table inputs

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -1757,7 +1757,7 @@
             <td><button type="roll" name="roll_attacksm2" title="%{attacksm2}" value="/em rolls [[@{damsm2}+([[(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]])]] damage using their @{ammoname}!"></button></td>
             <td><input type="text" name="attr_daml2" title="@{daml2}" class="sheet-short"></td>
             <td><button type="roll" name="roll_attackl2" title="%{attackl2}" value="/em rolls [[@{daml2}+([[(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]])]] damage using their @{ammoname}!"></button></td>
-            <td><input type="number" name="attr_ammoremain" title="@{ammoremain}" class="sheet-short"></td>
+            <td><input type="number" name="attr_ammoremain" title="@{ammoremain}" class="sheet-table-dynamic"></td>
     </tr>
     </table>
 <fieldset name="repeating_ammo" title="@{ammo}" class="repeating_ammo">
@@ -1779,7 +1779,7 @@
             <td><button type="roll" name="roll_attacksm2" title="%{repeating_ammo_$X_attacksm2}" value="/em rolls [[@{damsm2}+([[(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]])]] damage using their @{ammoname}!"></button></td>
             <td><input type="text" name="attr_daml2" title="@{repeating_ammo_$X_daml2}" class="sheet-short"></td>
             <td><button type="roll" name="roll_attackl2" title="%{repeating_ammo_$X_attackl2}" value="/em rolls [[@{daml2}+([[(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]])]] damage using their @{ammoname}!"></button></td>
-            <td><input type="number" name="attr_ammoremain" title="@{repeating_ammo_$X_ammoremain}" class="sheet-short"></td>
+            <td><input type="number" name="attr_ammoremain" title="@{repeating_ammo_$X_ammoremain}" class="sheet-table-dynamic"></td>
     </tr>
 </table>
 </fieldset>
@@ -2212,7 +2212,7 @@
                                     <td><button type="roll" name="roll_attacksm-po-d2" title="%{attacksm-po-d2}" value="/em rolls [[@{damsm-po-d2}+([[(@{damadj-po-d2})+((@{strengthdmg})*@{strbonus-po-d2})+((@{dexmissile})*@{dexbonus-po-d2})+(@{specialist-damage-po-d2})+(@{mastery-damage-po-d2})+(?{Misc. bonus|0})]])]] damage using their @{ammoname-po-d2}!"></button></td>
                                     <td><input type="text" name="attr_daml-po-d2" title="@{daml-po-d2}" class="sheet-short"></td>
                                     <td><button type="roll" name="roll_attackl-po-d2" title="%{attackl-po-d2}" value="/em rolls [[@{daml-po-d2}+([[(@{damadj-po-d2})+((@{strengthdmg})*@{strbonus-po-d2})+((@{dexmissile})*@{dexbonus-po-d2})+(@{specialist-damage-po-d2})+(@{mastery-damage-po-d2})+(?{Misc. bonus|0})]])]] damage using their @{ammoname-po-d2}!"></button></td>
-                                    <td><input type="number" name="attr_ammoremain-po-d2" title="@{ammoremain-po-d2}" class="sheet-short"></td>
+                                    <td><input type="number" name="attr_ammoremain-po-d2" title="@{ammoremain-po-d2}" class="sheet-table-dynamic"></td>
                             </tr>
                     </table>
                     <fieldset name="repeating_ammo-po-d2" title="@{ammo-po-d2}" class="repeating_ammo-po-d2">
@@ -2239,7 +2239,7 @@
                                             <td><button type="roll" name="roll_attacksm-po-d2" title="%{repeating_ammo_$X_attacksm-po-d2}" value="/em rolls [[@{damsm-po-d2}+([[(@{damadj-po-d2})+((@{strengthdmg})*@{strbonus-po-d2})+((@{dexmissile})*@{dexbonus-po-d2})++(@{specialist-damage-po-d2})+(@{mastery-damage-po-d2})+(?{Misc. bonus|0})]])]] damage using their @{ammoname-po-d2}!"></button></td>
                                             <td><input type="text" name="attr_daml-po-d2" title="@{repeating_ammo_$X_daml-po-d2}" class="sheet-short"></td>
                                             <td><button type="roll" name="roll_attackl-po-d2" title="%{repeating_ammo_$X_attackl-po-d2}" value="/em rolls [[@{daml-po-d2}+([[(@{damadj-po-d2})+((@{strengthdmg})*@{strbonus-po-d2})+((@{dexmissile})*@{dexbonus-po-d2})+(@{specialist-damage-po-d2})+(@{mastery-damage-po-d2})+(?{Misc. bonus|0})]])]] damage using their @{ammoname-po-d2}!"></button></td>
-                                            <td><input type="number" name="attr_ammoremain-po-d2" title="@{repeating_ammo_$X_ammoremain-po-d2}" class="sheet-short"></td>
+                                            <td><input type="number" name="attr_ammoremain-po-d2" title="@{repeating_ammo_$X_ammoremain-po-d2}" class="sheet-table-dynamic"></td>
                                     </tr>
                             </table>
                     </fieldset>
