Styled the proficiency checkboxes to properly the boxes with the title headings

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -3292,34 +3292,34 @@
     <tr>
             <td class="sheet-default-header">Weapon</td>
             <td class="sheet-default-header">Slots</td>
-            <td class="sheet-default-header">Ex</td>
-            <td class="sheet-default-header">Sp</td>
-            <td class="sheet-default-header">M</td>
-            <td class="sheet-default-header">HM</td>
-            <td class="sheet-default-header">GM</td>
-            <td class="sheet-default-header">CW</td>
+            <td class="sheet-default-header sheet-centering">Ex</td>
+            <td class="sheet-default-header sheet-centering">Sp</td>
+            <td class="sheet-default-header sheet-centering">M</td>
+            <td class="sheet-default-header sheet-centering">HM</td>
+            <td class="sheet-default-header sheet-centering">GM</td>
+            <td class="sheet-default-header sheet-centering">CW</td>
     </tr>
     <tr>
             <td><input type="text" name="attr_weapprofname" title="@{weaponprofname}" class="sheet-middle" placeholder="Name of Weapon Prof"></td>
             <td><input type="text" name="attr_weapprofnum" title="@{weapprofnum}" class="sheet-short" placeholder="Slots"></td>
-            <td>&nbsp;<input type="checkbox" name="attr_expert" title="@{expert}" value="1" /><span></span></td>
-            <td>&nbsp;<input type="checkbox" name="attr_specialist" title="@{specialist}" value="1" /><span></span></td>
-            <td>&nbsp;<input type="checkbox" name="attr_mastery" title="@{mastery}" value="1" /><span></span></td>
-            <td>&nbsp;<input type="checkbox" name="attr_high-mastery" title="@{high-mastery}" value="1" /><span></span></td>
-            <td>&nbsp;<input type="checkbox" name="attr_grand-mastery" title="@{grand-mastery}" value="1" /><span></span></td>
-            <td>&nbsp;<input type="checkbox" name="attr_chosen-weapon" title="@{chosen-weapon}" value="1" /><span></span></td>
+            <td><label><input type="checkbox" name="attr_expert" title="@{expert}" value="1"/><span></span></label></td>
+            <td><label><input type="checkbox" name="attr_specialist" title="@{specialist}" value="1"/><span></span></label></td>
+            <td><label><input type="checkbox" name="attr_mastery" title="@{mastery}" value="1"/><span></span></label></td>
+            <td><label><input type="checkbox" name="attr_high-mastery" title="@{high-mastery}" value="1"/><span></span></label></td>
+            <td><label><input type="checkbox" name="attr_grand-mastery" title="@{grand-mastery}" value="1"/><span></span></label></td>
+            <td><label><input type="checkbox" name="attr_chosen-weapon" title="@{chosen-weapon}" value="1"/><span></span></label></td>
     </tr>
     </table>
     <fieldset name="repeating_weaponprofs" title="@{weaponprofs}" class="repeating_weaponprofs"><table style='border-collapse: collapse; border-spacing: 0;'>
     <tr>
             <td><input type="text" name="attr_weapprofname" title="@{repeating_weaponprofs_$X_weaponprofname}" class="sheet-middle" placeholder="Name of Weapon Prof"></td>
             <td><input type="text" name="attr_weapprofnum" title="@{repeating_weaponprofs_$X_weapprofnum}" class="sheet-short" placeholder="Slots"></td>
-            <td>&nbsp;<input type="checkbox" name="attr_expert" title="@{expert}" value="1" /><span></span></td>
-            <td>&nbsp;<input type="checkbox" name="attr_specialist" title="@{specialist}" value="1" /><span></span></td>
-            <td>&nbsp;<input type="checkbox" name="attr_mastery" title="@{mastery}" value="1" /><span></span></td>
-            <td>&nbsp;<input type="checkbox" name="attr_high-mastery" title="@{high-mastery}" value="1" /><span></span></td>
-            <td>&nbsp;<input type="checkbox" name="attr_grand-mastery" title="@{grand-mastery}" value="1" /><span></span></td>
-            <td>&nbsp;<input type="checkbox" name="attr_chosen-weapon" title="@{chosen-weapon}" value="1" /><span></span></td>
+            <td><label><input type="checkbox" name="attr_expert" title="@{expert}" value="1"/><span></span></label></td>
+            <td><label><input type="checkbox" name="attr_specialist" title="@{specialist}" value="1"/><span></span></label></td>
+            <td><label><input type="checkbox" name="attr_mastery" title="@{mastery}" value="1"/><span></span></label></td>
+            <td><label><input type="checkbox" name="attr_high-mastery" title="@{high-mastery}" value="1"/><span></span></label></td>
+            <td><label><input type="checkbox" name="attr_grand-mastery" title="@{grand-mastery}" value="1"/><span></span></label></td>
+            <td><label><input type="checkbox" name="attr_chosen-weapon" title="@{chosen-weapon}" value="1"/><span></span></label></td>
     </tr>
 </table></fieldset>
     <br>
