fixed consumable dropdown selector for translations

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -2113,10 +2113,10 @@
                 <div class="consumables-box5">
                     <select class="input" name="attr_food" title="@{food}">
                         <option value="{{subtitle=^{out-of-food}}}" selected>0</option>
-                        <option value="{{subtitle=^{die-6-u} ^{of-food}}} {{consumable-die-six=[[ 1 ]] }} {{consumable-roll-six=[[ 1d6 ]] }}"> <span data-i18n="die-6">d6</span></option>
-                        <option value="{{subtitle=^{die-8-u} ^{of-food}}} {{consumable-die-eight=[[ 1 ]] }} {{consumable-roll-eight=[[ 1d8 ]] }}"> <span data-i18n="die-8">d8</span></option>
-                        <option value="{{subtitle=^{die-10-u} ^{of-food}}} {{consumable-die-ten=[[ 1 ]] }} {{consumable-roll-ten=[[ 1d10 ]] }}"> <span data-i18n="die-10">d10</span></option>
-                        <option value="{{subtitle=^{die-12-u} ^{of-food}}} {{consumable-die-twelve=[[ 1 ]] }} {{consumable-roll-twelve=[[ 1d12 ]] }}"> <span data-i18n="die-12">d12</span></option>
+                        <option value="{{subtitle=^{die-6-u} ^{of-food}}} {{consumable-die-six=[[ 1 ]] }} {{consumable-roll-six=[[ 1d6 ]] }}" data-i18n="die-6">d6</option>
+                        <option value="{{subtitle=^{die-8-u} ^{of-food}}} {{consumable-die-eight=[[ 1 ]] }} {{consumable-roll-eight=[[ 1d8 ]] }}" data-i18n="die-8">d8</option>
+                        <option value="{{subtitle=^{die-10-u} ^{of-food}}} {{consumable-die-ten=[[ 1 ]] }} {{consumable-roll-ten=[[ 1d10 ]] }}" data-i18n="die-10">d10</option>
+                        <option value="{{subtitle=^{die-12-u} ^{of-food}}} {{consumable-die-twelve=[[ 1 ]] }} {{consumable-roll-twelve=[[ 1d12 ]] }}" data-i18n="die-12">d12</option>
                     </select>
                 </div>
                 <div class="consumables-box6">
@@ -2128,10 +2128,10 @@
                 <div class="consumables-box8">
                     <select class="input" name="attr_water" title="@{water}">
                         <option value="{{subtitle=^{out-of-water}}}" selected>0</option>
-                        <option value="{{subtitle=^{die-6-u} ^{of-water}}} {{consumable-die-six=[[ 1 ]] }} {{consumable-roll-six=[[ 1d6 ]] }}"> <span data-i18n="die-6">d6</span></option>
-                        <option value="{{subtitle=^{die-8-u} ^{of-water}}} {{consumable-die-eight=[[ 1 ]] }} {{consumable-roll-eight=[[ 1d8 ]] }}"> <span data-i18n="die-8">d8</span></option>
-                        <option value="{{subtitle=^{die-10-u} ^{of-water}}} {{consumable-die-ten=[[ 1 ]] }} {{consumable-roll-ten=[[ 1d10 ]] }}"> <span data-i18n="die-10">d10</span></option>
-                        <option value="{{subtitle=^{die-12-u} ^{of-water}}} {{consumable-die-twelve=[[ 1 ]] }} {{consumable-roll-twelve=[[ 1d12 ]] }}"> <span data-i18n="die-12">d12</span></option>
+                        <option value="{{subtitle=^{die-6-u} ^{of-water}}} {{consumable-die-six=[[ 1 ]] }} {{consumable-roll-six=[[ 1d6 ]] }}" data-i18n="die-6">d6</option>
+                        <option value="{{subtitle=^{die-8-u} ^{of-water}}} {{consumable-die-eight=[[ 1 ]] }} {{consumable-roll-eight=[[ 1d8 ]] }}" data-i18n="die-8">d8</option>
+                        <option value="{{subtitle=^{die-10-u} ^{of-water}}} {{consumable-die-ten=[[ 1 ]] }} {{consumable-roll-ten=[[ 1d10 ]] }}" data-i18n="die-10">d10</option>
+                        <option value="{{subtitle=^{die-12-u} ^{of-water}}} {{consumable-die-twelve=[[ 1 ]] }} {{consumable-roll-twelve=[[ 1d12 ]] }}" data-i18n="die-12">d12</option>
                     </select>
                 </div>
                 <div class="consumables-box9">
@@ -2143,10 +2143,10 @@
                 <div class="consumables-box11">
                     <select class="input" name="attr_arrows" title="@{arrows}">
                         <option value="{{subtitle=^{out-of-arrows}}}" selected>0</option>
-                        <option value="{{subtitle=^{die-6-u} ^{of-arrows}}} {{consumable-die-six=[[ 1 ]] }} {{consumable-roll-six=[[ 1d6 ]] }}"> <span data-i18n="die-6">d6</span></option>
-                        <option value="{{subtitle=^{die-8-u} ^{of-arrows}}} {{consumable-die-eight=[[ 1 ]] }} {{consumable-roll-eight=[[ 1d8 ]] }}"> <span data-i18n="die-8">d8</span></option>
-                        <option value="{{subtitle=^{die-10-u} ^{of-arrows}}} {{consumable-die-ten=[[ 1 ]] }} {{consumable-roll-ten=[[ 1d10 ]] }}"> <span data-i18n="die-10">d10</span></option>
-                        <option value="{{subtitle=^{die-12-u} ^{of-arrows}}} {{consumable-die-twelve=[[ 1 ]] }} {{consumable-roll-twelve=[[ 1d12 ]] }}"> <span data-i18n="die-12">d12</span></option>
+                        <option value="{{subtitle=^{die-6-u} ^{of-arrows}}} {{consumable-die-six=[[ 1 ]] }} {{consumable-roll-six=[[ 1d6 ]] }}" data-i18n="die-6">d6</option>
+                        <option value="{{subtitle=^{die-8-u} ^{of-arrows}}} {{consumable-die-eight=[[ 1 ]] }} {{consumable-roll-eight=[[ 1d8 ]] }}" data-i18n="die-8">d8</option>
+                        <option value="{{subtitle=^{die-10-u} ^{of-arrows}}} {{consumable-die-ten=[[ 1 ]] }} {{consumable-roll-ten=[[ 1d10 ]] }}" data-i18n="die-10">d10</option>
+                        <option value="{{subtitle=^{die-12-u} ^{of-arrows}}} {{consumable-die-twelve=[[ 1 ]] }} {{consumable-roll-twelve=[[ 1d12 ]] }}" data-i18n="die-12">d12</option>
                     </select>
                 </div>
                 <div class="consumables-box12">
@@ -2158,10 +2158,10 @@
                 <div class="consumables-box14">
                     <select class="input" name="attr_torches" title="@{torches}">
                         <option value="{{subtitle=^{out-of-torches}}}" selected>0</option>
-                        <option value="{{subtitle=^{die-6-u} ^{of-torches}}} {{consumable-die-six=[[ 1 ]] }} {{consumable-roll-six=[[ 1d6 ]] }}"> <span data-i18n="die-6">d6</span></option>
-                        <option value="{{subtitle=^{die-8-u} ^{of-torches}}} {{consumable-die-eight=[[ 1 ]] }} {{consumable-roll-eight=[[ 1d8 ]] }}"> <span data-i18n="die-8">d8</span></option>
-                        <option value="{{subtitle=^{die-10-u} ^{of-torches}}} {{consumable-die-ten=[[ 1 ]] }} {{consumable-roll-ten=[[ 1d10 ]] }}"> <span data-i18n="die-10">d10</span></option>
-                        <option value="{{subtitle=^{die-12-u} ^{of-torches}}} {{consumable-die-twelve=[[ 1 ]] }} {{consumable-roll-twelve=[[ 1d12 ]] }}"> <span data-i18n="die-12">d12</span></option>
+                        <option value="{{subtitle=^{die-6-u} ^{of-torches}}} {{consumable-die-six=[[ 1 ]] }} {{consumable-roll-six=[[ 1d6 ]] }}" data-i18n="die-6">d6</option>
+                        <option value="{{subtitle=^{die-8-u} ^{of-torches}}} {{consumable-die-eight=[[ 1 ]] }} {{consumable-roll-eight=[[ 1d8 ]] }}" data-i18n="die-8">d8</option>
+                        <option value="{{subtitle=^{die-10-u} ^{of-torches}}} {{consumable-die-ten=[[ 1 ]] }} {{consumable-roll-ten=[[ 1d10 ]] }}" data-i18n="die-10">d10</option>
+                        <option value="{{subtitle=^{die-12-u} ^{of-torches}}} {{consumable-die-twelve=[[ 1 ]] }} {{consumable-roll-twelve=[[ 1d12 ]] }}" data-i18n="die-12">d12</option>
                     </select>
                 </div>
                 <div class="consumables-box15">
