Removed unused tags with missing start or end tag

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -6164,7 +6164,7 @@
     <div class="sheet-2colrow">
     <div class="sheet-col">
     <h4><b>Psionic Strength Points</b></h4>
-        <table style='width:250px;'><tr><td>
+<table style='width:250px;'>
     <tr>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:100px;">Value</td>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:50px;">Current</td>
@@ -6197,10 +6197,9 @@
         <td><input type="text" name="attr_psispeed1" title="@{psispeed1}" class="sheet-small"></td>
         <td><button type="roll" name="roll_psispeed" title="%{psispeed}" value="/gmroll [[{([[1d10]]+@{psispeed1}-(?{Misc. bonus|+0})), 1}kh1]] [Initiative (Psionic Power)]&{tracker}"></button></td>
     </tr>
-        </td></tr></table>
+</table>
         </div>
         <div class="sheet-col">
-    </ul>
     <h4><b>Psionic Proficiencies</b></h4><br><ul>
     <fieldset name="repeating_psiprofs" title="@{psiprofs}" class="repeating_psiprofs"><table>
     <tr>
@@ -6594,7 +6593,7 @@
 </table></fieldset></div>
     <div class="sheet-col">
     <br><h4><b>Psionic Strength Points</b></h4>
-        <table style='width:250px;'><tr><td>
+<table style='width:250px;'>
     <tr>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:100px;">Value</td>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:50px;">Current</td>
@@ -6627,7 +6626,7 @@
         <td style="color: #FFF; font-family: Arial, sans-serif; font-weight: bold;">/</td>
         <td><input type="number" name="attr_temp-selfMAC" title="@{temp-selfMAC}" class="sheet-short"/></td>
     </tr>
-        </td></tr></table>
+</table>
         </div>
         <div class="sheet-col">
     <br><h4><b>Psionic Proficiencies</b></h4>
@@ -10749,7 +10748,7 @@
     <div class="sheet-2colrow">
     <div class="sheet-col">
     <h4><b>Psionic Strength Points</b></h4>
-        <table style='width:250px;'><tr><td>
+<table style='width:250px;'>
     <tr>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:100px;">Value</td>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:50px;">Current</td>
@@ -10782,10 +10781,10 @@
         <td><input type="text" name="attr_psispeed501" title="@{psispeed501}" class="sheet-small"></td>
         <td><button type="roll" name="roll_psispeed500" title="%{psispeed500}" value="/gmroll [[{([[1d10]]+@{psispeed501}-(?{Misc. bonus|+0})), 1}kh1)]] [Initiative (Psionic Power)]&{tracker}"></button></td>
     </tr>
-        </td></tr></table>
+</table>
         </div>
         <div class="sheet-col">
-    </ul><br><br>
+    <br><br>
     <h4><b>Psionic Proficiencies</b></h4><br><ul>
     <table>
     <tr>
@@ -11262,7 +11261,7 @@
     </table></div>
     <div class="sheet-col">
     <br><h4>Psionic Strength Points</h4>
-        <table style='width:250px;'><tr><td>
+<table style='width:250px;'>
     <tr>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:100px;">Value</td>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:50px;">Current</td>
@@ -11295,7 +11294,7 @@
         <td style="color: #FFF; font-family: Arial, sans-serif; font-weight: bold;">/</td>
         <td><input type="number" name="attr_temp-selfMAC500" title="@{temp-selfMAC500}" class="sheet-short"/></td>
     </tr>
-        </td></tr></table>
+</table>
         </div>
     <div class="sheet-col">
     <br><h4>Psionic NWP's</h4>
@@ -11966,7 +11965,7 @@
     <div class="sheet-2colrow">
     <div class="sheet-col">
     <h4><b>Psionic Strength Points</b></h4>
-        <table style='width:250px;'><tr><td>
+<table style='width:250px;'>
     <tr>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:100px;">Value</td>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:50px;">Current</td>
@@ -11999,10 +11998,10 @@
         <td><input type="text" name="attr_psispeed501" title="@{repeating_hench5_$X_psispeed501}" class="sheet-small"></td>
         <td><button type="roll" name="roll_psispeed500" title="%{repeating_hench5_$X_psispeed500}" value="/gmroll [[{([[1d10]+@{psispeed501}-(?{Misc. bonus|+0})), 1}kh1)]] [Initiative (Psionic Power)]&{tracker}"></button></td>
     </tr>
-        </td></tr></table>
+</table>
         </div>
         <div class="sheet-col">
-    </ul><br><br>
+    <br><br>
     <h4><b>Psionic Proficiencies</b></h4><br><ul>
     <table>
     <tr>
@@ -12477,7 +12476,7 @@
     </table></div>
     <div class="sheet-col">
     <br><h4>Psionic Strength Points</h4>
-        <table style='width:250px;'><tr><td>
+        <table style='width:250px;'>
     <tr>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:100px;">Value</td>
         <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:50px;">Current</td>
@@ -12510,7 +12509,7 @@
         <td style="color: #FFF; font-family: Arial, sans-serif; font-weight: bold;">/</td>
         <td><input type="number" name="attr_temp-selfMAC500" title="@{repeating_hench5_$X_temp-selfMAC500}" class="sheet-short"/></td>
     </tr>
-        </td></tr></table>
+</table>
         </div>
     <div class="sheet-col">
     <br><h4>Psionic NWP's</h4>
