Removed unused, and added missing start tags

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -13383,7 +13383,6 @@
 <div class="sheet-tab-content sheet-section-monster-page">
 <h2><b>Monster Info</b></h2><br>
 <h4><b>Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></h4><input type="text" name="attr_character_name" title="@{character_name}">&nbsp;&nbsp;&nbsp;<button type="roll" name="roll_surprisemon" title="@{surprisemon}" value="/gmroll [[{([[1d10]]+(?{Misc Modifier?|+0})), 1}kh1]] [Surprise roll for @{character_name}]">Surprise</button>&nbsp;&nbsp;&nbsp;<button type="roll" name="roll_monmorale" title="@{monmorale}" value="/gmroll [[{([[1d20]]+(?{Misc. Modifier?|+0})), 1}kh1]]&le;@{monstermorale}">Morale</button>
-<tr><td></td></tr>
     
     <div class="body">
     <div class='sheet-3colrow'>
@@ -13412,10 +13411,10 @@
 </tr></table>
     </div>
     <div class='sheet-col'>
-<table><tr>
-<td><h4><b>No. Appearing:</b></h4></td><td><input type="text" name="attr_appearing" title="@{appearing}" class="short"></td></tr>
+<table>
+<tr><td><h4><b>No. Appearing:</b></h4></td><td><input type="text" name="attr_appearing" title="@{appearing}" class="short"></td></tr>
 <tr><td><h4><b>Special Attacks:</b></h4></td><td><input type="text" name="attr_monsterspecattacks" title="@{monsterspecattacks}"></td></tr>
-<td><h4><b>Special Defenses:</b></h4></td><td><input type="text" name="attr_monsterspecdefenses" title="@{monsterspecdefenses}"></td></tr>
+<tr><td><h4><b>Special Defenses:</b></h4></td><td><input type="text" name="attr_monsterspecdefenses" title="@{monsterspecdefenses}"></td></tr>
 <tr><td><h4><b>Magic Resistance:</b></h4></td><td><input type="text" name="attr_monstermagicresist" title="@{monstermagicresist}" class="short"><h4><b>%</b></h4><button type="roll" name="roll_monstermagicresist" title="%{monstermagicresist}" value="/gmroll [[1d100+(?{Modifier?|0})]]<[[@{monstermagicresist}]]">Roll</button></td></tr>
 <tr><td><h4><b>Size:</b></h4></td><td><input type="text" name="attr_monstersize" title="@{monstersize}" class="tiny"></td></tr>
 <tr><td><h4><b>Morale:</b></h4></td><td><input type="text" name="attr_monstermorale" title="@{monstermorale}"></td></tr>
@@ -13501,7 +13500,7 @@
 <table><tr>
 <td><h4><b>No. Appearing:</b></h4></td><td><input type="text" name="attr_appearing" title="@{repeating_monstervariants_$X_appearing}" class="short"></td></tr>
 <tr><td><h4><b>Special Attacks:</b></h4></td><td><input type="text" name="attr_monsterspecattacks" title="@{repeating_monstervariants_$X_monsterspecattacks}"></td></tr>
-<td><h4><b>Special Defenses:</b></h4></td><td><input type="text" name="attr_monsterspecdefenses" title="@{repeating_monstervariants_$X_monsterspecdefenses}"></td></tr>
+<tr><td><h4><b>Special Defenses:</b></h4></td><td><input type="text" name="attr_monsterspecdefenses" title="@{repeating_monstervariants_$X_monsterspecdefenses}"></td></tr>
 <tr><td><h4><b>Magic Resistance:</b></h4></td><td><input type="text" name="attr_monstermagicresist" title="@{repeating_monstervariants_$X_monstermagicresist}" class="short"><h4><b>%</b></h4><button type="roll" name="roll_monstermagicresist" title="%{repeating_monstervariants_$X_monstermagicresist}" value="/gmroll [[1d100+(?{Modifier?|0})]]<[[@{monstermagicresist}]]">Roll</button></td></tr>
 <tr><td><h4><b>Size:</b></h4></td><td><input type="text" name="attr_monstersize" title="@{repeating_monstervariants_$X_monstersize}" class="tiny"></td></tr>
 <tr><td><h4><b>Morale:</b></h4></td><td><input type="text" name="attr_monstermorale" title="@{repeating_monstervariants_$X_monstermorale}"></td></tr>
